k8s/overlays/staging/staging-patches/congen-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: congen
spec:
  type: LoadBalancer
